[package]
name = "matteo_contribution"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"]}
common_structs = { git = "https://github.com/rusty-drone-2024/common-structs.git"}
crossbeam-channel = ">=0.5.13"
tiny_http = "0.12.0"
open = "5.3.2"

[dev-dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"]}
# rusty_tester = { git = "https://github.com/rusty-drone-2024/rusty-tester.git", branch = "main" }
