[package]
name = "matteo_contribution"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = ">=0.5.13"
attohttpc = "0.28.2"
petgraph = { version = "0.7.1", default-features = false, features = ["graphmap"] }

wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
common_structs = { git = "https://github.com/rusty-drone-2024/common-structs.git" }
client_bridge = { path = "client_bridge" }

[dev-dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
common_structs = { git = "https://github.com/rusty-drone-2024/common-structs.git", features = ["debug"] }
rusty_tester = { git = "https://github.com/rusty-drone-2024/rusty-tester.git" }