[package]
name = "client_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
common_structs = { git = "https://github.com/rusty-drone-2024/common-structs.git" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"