[package]
name = "client_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"

client_bridge = { path = "../client_bridge" }

[dependencies.iced]
version = "0.13.1"
default-features = false
features = [
    "wgpu",
    "tiny-skia",
    "markdown",
    "advanced",
    "tokio"
]

[dependencies.tokio]
version = "1.43.0"
default-features = false
features = ["net", "io-util"]