[package]
name = "client_ui"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
open = "5.3.2"

client_bridge = { path = "../client_bridge" }

[dependencies.iced]
version = "0.13.1"
default-features = false
features = [
    "wgpu",
    "tiny-skia",
    "markdown",
    "highlighter",
    "advanced",
    "tokio"
]

[dependencies.tokio]
version = "1.43.0"
default-features = false
features = ["net", "io-util"]