[package]
name = "client_ui"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
open = "5.3.2"

common_structs = { git = "https://github.com/rusty-drone-2024/common-structs.git" }
client_bridge = { path = "../client_bridge" }

[dependencies.iced]
#git = "https://github.com/iced-rs/iced"
git = "https://github.com/rusty-drone-2024/iced"
#path = "../../iced"
default-features = false
features = [
    "wgpu",
    "tiny-skia",
    "markdown",
    "highlighter",
    "advanced",
    "tokio",
    "image"
]

[dependencies.tokio]
version = "1.43.0"
default-features = false
features = ["net", "io-util"]